# python-cli-template

./: .dockerignore  CHANGELOG.md  CLAUDE.md  Dockerfile  NOTICES  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  codeql.yml
cli/: __init__.py  __version__.py  config.py  main.py
cli/adapters/: __init__.py  endoflife.py  interact.py  io.py
cli/commands/: __init__.py  endoflife.py  interact.py  io.py
clitool/: __main__.py  __version__.py  cli.py  output.py
tests/adapters/: __init__.py  test_interact.py  test_io.py
tests/commands/: test_interact.py  test_io.py
tool/: __version__.py  cli.py
