[project]
name = "clitool"
version = "20250825"
description = "A template for building command line interfaces in Python."
authors = [
    {name = "tkcn568", email = "840383+tkcn568@users.noreply.github.com"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "tqdm (>=4.61.1)",
    "requests (>=2.25.1)",
    "click (>=8.0.1)",
    "rich (>=14.1.0)",
]

[tool.poetry.group.dev.dependencies]
sphinx-click = "^3.0.1"
stdeb = "^0.10.0"
pytest = "^8.4.1"
toml = "^0.10.2"

[project.scripts]

clitool = "clitool.cli:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
