[project]
name = "python-cli-template"
version = "20260717"
description = "A template for building command line interfaces in Python."
authors = [
    {name = "tkcn568", email = "840383+tkcn568@users.noreply.github.com"}
]
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "tqdm>=4.61.1",
    "requests>=2.25.1",
    "click>=8.0.1",
    "rich>=14.1.0",
]

[project.optional-dependencies]
dev = [
    "sphinx-click>=3.0.1",
    "stdeb>=0.10.0",
    "pytest>=8.4.1",
    "ruff>=0.6.0",
]

[dependency-groups]
dev = [
    "sphinx-click>=3.0.1",
    "stdeb>=0.10.0",
    "pytest>=8.4.1",
    "ruff>=0.6.0",
]

[project.scripts]
clitool = "cli.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
